app/styles/templates/_item.scss
.hidden {
  display: none !important;
}

.view-item {
  @media only screen and (min-width: 120.1em) {
    margin-left: 4rem !important;
  }
  &.main-section{
    padding-top: 1rem;
    padding-left: 0;
    @media #{$small-only}{
      padding-top: 3.2rem;
    }
  }

  .item_category{
    padding-left: 1rem;
  }

  .item_name {
    color: $white;
    font-size: 1rem;
    @media #{$small-only} {
      font-size: 0.9rem;
      color: #e6e6e6;
    }
  }

  .item_details {
    @extend .with_more_spacing;
    font-size: 0.9rem;
    @media #{$small-only} {
      font-size: 0.73rem;
    }
  }

  .view-image{
    @media #{$small-only} {
      margin-left: -1rem;
    }
    img {
      display: block;
      padding-bottom: 1rem;
      @media #{$small-only}{
        padding-bottom: 0;
      }
    }
  }


  .thumb-image {
    margin-bottom: 0.5rem;
    cursor: pointer;
  }

  .thumb {
    border: 2px solid gray;
  }

  .image-src {
    display: inline-block;
  }

  #lightGallery {
    cursor: pointer;
    text-decoration: underline;
    @media #{$small-only}{
      background: #1A3964;
    }
  }

  .item_type{
    font-size: 1.1rem;
    font-weight: bold;
  }
  .item_category{
    margin-bottom: 1.1rem;
  }
  .item_categories{
    margin-bottom: 1rem;
    a{
      @media #{$small-only} {
        color: #dfefec;
      }
    }
    a span{
      border-bottom: 1px solid #a3aab6;
    }
    a:not(:last-of-type):after{
      content: ", "
    }
  }
  .no_image{
    line-height: 18rem;
    text-align: center;
    margin-top: -15%;
  }
}

.item-controls{
  @media only screen and (min-width: 120.1em) {
    margin-left: 4rem !important;
  }
  @media #{$small-only} {
    border-bottom: none;
    top: -1rem;
    height: 4rem;
    position: absolute;
    width: 100%;
    background: transparent !important;
  }

  &.tab-bar-placeholder {
    background: $dark-blue;
  }
}

.item-remove-icon {
  margin-left: -1.3rem;
}

.item-page{

  @media #{$small-only} {
    position: absolute;
    z-index: 1;
  }

  .pagination{
    margin-top: 0.5rem;

    @media #{$small-only}{
      margin-top: 1.3rem;
      margin-right: .1rem;
    }

    li {
      a {
        border-radius: 0px;
        &:hover, &:active{
          transition: background-color 300ms ease-out;
          @extend .highlight_btn;
        }
        &:focus{
          background: initial;
        }
      }
      @media #{$small-only}{
        background: none !important;
        margin-right: 1rem;
        i{
          font-size: 1rem!important;
          font-weight: 700!important;
          margin-top: .4rem!important;
          margin-left: -0.2rem;
        }
        .fa-arrow-right{
          margin-right: -0.1rem;
        }
      }
    }
  }
  a {
    @media #{$small-only}{
      color: black !important;
      top: 1.5rem;
      color: black;
      border-radius: 50% !important;
      background-color: #fff !important;
      border: 1px solid #a3aab6 !important;
      width: 2rem;
      height: 2rem;
      margin-left: 0.2rem;
      i{
        margin: -0.2rem 0 0 -.6rem;
      }
    }
  }
}

.profile{
  background-size: cover;
  width: 100%;
  height: 18rem;
  object-fit: cover;
}

#lightGallery {
  @media #{$small-only} {
    margin-top: -15%;
  }
}

.slick-slider {
  // height: 19.2vw;
  @media #{$small-only} {
    margin-bottom: -2px;
  }
}


.no-avatar {
  @media #{$small-only} {
    display: inline-block;
    margin-right: 1rem;

    display: block;
    color: $white;
    text-transform: uppercase;
    text-align: center;
    border-radius: 50%;
    background: $white;
    font-weight: bold;
    margin-top: 0.2rem;
    border: 1px solid $medium-blue;

    line-height: 2rem;
    width: 2rem;
    height: 2rem;
    font-size: 1.2rem;

    i {
      color: black;
    }
  }

  &.item-remove-icon{
    margin-top: 1.5rem;

    .remove-icon {
      @media #{$small-only} {
        margin-left: .2rem;
        font-size: 1.5rem!important;
        margin-top: 0.2rem!important;
        margin-left: -0.05rem!important;
      }
    }
  }
}

.package_category_link{
  border-bottom: 1px solid #a3aab6;
  font-size: 1.125rem;
  cursor: pointer;
}

.package-type{
  font-size: 1.125rem;
  font-weight: 700;
}

.package_catogory_header{
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

